tests/ui/underscore-lifetime/underscore-outlives-bounds.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/underscore-outlives-bounds.rs:7:10
   |
LL | impl<'b: '_> Foo<'b> for i32 {}
   |          ^^ `'_` is a reserved lifetime name

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0637`.
